SERVER-34477 Do not mix iterators from different maps